--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,13 @@ h1 {
   width: 200px;
   height: 200px;
 }
+
+.text {
+  font-size: 12px;
+}
+
+#toggle-drawing {
+  width: 27%;
+  position: relative;
+  margin-left: 10px;
+}
