--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 html,
 body {
   font-family: Arial, sans-serif;
@@ -28,6 +27,13 @@ h1 {
   width: 48%;
 }
 
+hr {
+  background: #D0D7D9;
+  height: 1px;
+  margin: 20px 0 20px 0;
+  border: none;
+}
+
 #map {
   bottom:0px;
   height: 100%;
@@ -52,6 +58,11 @@ h1 {
   height: 200px;
 }
 
+#places-search,
+#search-within-time-text {
+  width: 84%;
+}
+
 .text {
   font-size: 12px;
 }
@@ -60,4 +71,12 @@ h1 {
   width: 27%;
   position: relative;
   margin-left: 10px;
+}
+
+#zoom-to-area-text {
+  width: 70%;
+}
+
+#zoom-to-area {
+  width: 24%;
 }
